@@ -9,6 +9,9 @@
 
 package org.noise_planet.noisemodelling.jdbc;
 
+import com.bedatadriven.jackson.datatype.jts.JtsModule;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.h2gis.api.EmptyProgressVisitor;
 import org.h2gis.functions.factory.H2GISDBFactory;
 import org.h2gis.utilities.JDBCUtilities;
@@ -26,11 +29,13 @@ import org.noise_planet.noisemodelling.jdbc.input.SceneWithEmission;
 import org.noise_planet.noisemodelling.jdbc.output.NoiseMapWriter;
 import org.noise_planet.noisemodelling.jdbc.utils.CellIndex;
 import org.noise_planet.noisemodelling.jdbc.utils.IsoSurface;
+import org.noise_planet.noisemodelling.pathfinder.utils.geometry.CoordinateMixin;
 import org.noise_planet.noisemodelling.pathfinder.utils.profiler.RootProgressVisitor;
 import org.noise_planet.noisemodelling.propagation.AttenuationParameters;
-import org.noise_planet.noisemodelling.propagation.cnossos.CnossosPath;
+import org.noise_planet.noisemodelling.propagation.AttenuationOutput;
 import org.noise_planet.noisemodelling.pathfinder.profilebuilder.GroundAbsorption;
 import org.noise_planet.noisemodelling.pathfinder.utils.geometry.Orientation;
+import org.noise_planet.noisemodelling.propagation.cnossos.CnossosAttenuationOutput;
 import org.noise_planet.noisemodelling.propagation.cnossos.PointPath;
 
 import java.sql.Connection;
@@ -133,7 +138,7 @@ public class NoiseMapByReceiverMakerTest {
                 }
                 assertEquals(3, scene.wjSources.size());
                 assertEquals(1, scene.wjSources.get(1L).size());
-                assertEquals("D", scene.wjSources.get(1L).get(0).period);
+                assertEquals("D", scene.wjSources.get(1L).getFirst().period);
             }
         }
     }
@@ -167,6 +172,21 @@ public class NoiseMapByReceiverMakerTest {
         sb.append(") AS select ");
         sb.append(values.toString());
         return sb.toString();
+    }
+
+    /**
+     * Deserialize CnossosAttenuationOutput object.
+     *
+     * @param json The serialized CnossosAttenuationOutput
+     * @return Deserialized CnossosAttenuationOutput object
+     * @throws JsonProcessingException if the deserialization fails
+     */
+    public static CnossosAttenuationOutput jsonToCnossosAttenuationOutput(String json) throws JsonProcessingException {
+        ObjectMapper mapper = new ObjectMapper();
+        mapper.addMixIn(Coordinate.class, CoordinateMixin.class);
+        mapper.registerModule(new JtsModule());
+        return mapper.readValue(json, CnossosAttenuationOutput.class);
+
     }
 
 
@@ -229,10 +249,11 @@ public class NoiseMapByReceiverMakerTest {
             noiseMapByReceiverMaker.setHeightField("HEIGHT");
             noiseMapByReceiverMaker.setInputMode(SceneDatabaseInputSettings.INPUT_MODE.INPUT_MODE_LW_DEN);
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportRaysMethod = NoiseMapDatabaseParameters.ExportRaysMethods.TO_RAYS_TABLE;
-            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportCnossosPathWithAttenuation = true;
+            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationOutput = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationMatrix = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().mergeSources = true;
             noiseMapByReceiverMaker.setBodyBarrier(true);
+            noiseMapByReceiverMaker.setThreadCount(1);
 
             // Use train directivity functions instead of discrete directivity
             DefaultTableLoader defaultTableLoader = ((DefaultTableLoader) noiseMapByReceiverMaker.getPropagationProcessDataFactory());
@@ -261,20 +282,20 @@ public class NoiseMapByReceiverMakerTest {
                 assertFalse(rs.next());
             }
 
-            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH, IDSOURCE FROM " + parameters.raysTable + " WHERE PERIOD='D' AND NOT FAVOURABLE ORDER BY IDRECEIVER, IDSOURCE")) {
+            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH, IDSOURCE FROM " + parameters.raysTable + " WHERE PERIOD='D' AND METEO='homogeneous' ORDER BY IDRECEIVER, IDSOURCE")) {
                 assertTrue(rs.next());
                 assertEquals(1, rs.getInt(1));
-                CnossosPath cnossosPath = NoiseMapWriter.jsonToPropagationPath(rs.getString(2));
+                AttenuationOutput attenuationOutput = NoiseMapWriter.jsonToAttenuationOutput(rs.getString(2));
                 // This is source orientation, not relevant to receiver position
                 assertEquals(1, rs.getInt("IDSOURCE"));
-                assertOrientationEquals(new Orientation(45, 0.81, 0), cnossosPath.getSourceOrientation(), 0.01);
-                assertOrientationEquals(new Orientation(330.2084079818916,-5.947213381005439,0.0), cnossosPath.raySourceReceiverDirectivity, 0.01);
+                assertOrientationEquals(new Orientation(45, 0.81, 0), attenuationOutput.cutProfile.getSourceOrientation(), 0.01);
+                assertOrientationEquals(new Orientation(330.2084079818916,-5.947213381005439,0.0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity(), 0.01);
                 assertTrue(rs.next());
                 assertEquals(1, rs.getInt(1));
                 assertEquals(1, rs.getInt("IDSOURCE"));
-                cnossosPath = NoiseMapWriter.jsonToPropagationPath(rs.getString(2));
-                assertOrientationEquals(new Orientation(45, 0.81, 0), cnossosPath.getSourceOrientation(), 0.01);
-                assertOrientationEquals(new Orientation(336.9922375343167,-4.684918495003125,0.0), cnossosPath.raySourceReceiverDirectivity, 0.01);
+                attenuationOutput = NoiseMapWriter.jsonToAttenuationOutput(rs.getString(2));
+                assertOrientationEquals(new Orientation(45, 0.81, 0), attenuationOutput.cutProfile.getSourceOrientation(), 0.01);
+                assertOrientationEquals(new Orientation(336.9922375343167,-4.684918495003125,0.0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity(), 0.01);
             }
         }
     }
@@ -306,7 +327,7 @@ public class NoiseMapByReceiverMakerTest {
             noiseMapByReceiverMaker.setHeightField("HEIGHT");
             noiseMapByReceiverMaker.setInputMode(SceneDatabaseInputSettings.INPUT_MODE.INPUT_MODE_LW_DEN);
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportRaysMethod = NoiseMapDatabaseParameters.ExportRaysMethods.TO_RAYS_TABLE;
-            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportCnossosPathWithAttenuation = true;
+            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationOutput = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationMatrix = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().mergeSources = true;
             noiseMapByReceiverMaker.setBodyBarrier(true);
@@ -328,30 +349,30 @@ public class NoiseMapByReceiverMakerTest {
 
             NoiseMapDatabaseParameters parameters = noiseMapByReceiverMaker.getNoiseMapDatabaseParameters();
 
-            List<CnossosPath> pathsParameters = new ArrayList<>();
-            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH FROM " + parameters.raysTable + " WHERE PERIOD='D' AND NOT FAVOURABLE ORDER BY IDRECEIVER")) {
+            List<AttenuationOutput> attenuationOutputs = new ArrayList<>();
+            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH FROM " + parameters.raysTable + " WHERE PERIOD='D' AND METEO='homogeneous' ORDER BY IDRECEIVER")) {
                 while (rs.next()) {
-                    CnossosPath cnossosPath = NoiseMapWriter.jsonToPropagationPath(rs.getString("PATH"));
-                    pathsParameters.add(cnossosPath);
+                    CnossosAttenuationOutput attenuationOutput = jsonToCnossosAttenuationOutput(rs.getString("PATH"));
+                    attenuationOutputs.add(attenuationOutput);
                 }
             }
-            assertEquals(4 , pathsParameters.size());
-            CnossosPath pathParameters = pathsParameters.remove(0);
-            assertEquals(1, pathParameters.getCutProfile().getReceiver().receiverPk);
+            assertEquals(4 , attenuationOutputs.size());
+            AttenuationOutput attenuationOutput = attenuationOutputs.removeFirst();
+            assertEquals(1, attenuationOutput.getCutProfile().getReceiver().receiverPk);
             // receiver is front of source
-            assertEquals(new Orientation(0, 0, 0), pathParameters.getRaySourceReceiverDirectivity());
-            pathParameters = pathsParameters.remove(0);
-            assertEquals(2, pathParameters.getCutProfile().getReceiver().receiverPk);
+            assertEquals(new Orientation(0, 0, 0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity());
+            attenuationOutput = attenuationOutputs.removeFirst();
+            assertEquals(2, attenuationOutput.getCutProfile().getReceiver().receiverPk);
             // receiver is behind of the source
-            assertEquals(new Orientation(180, 0, 0), pathParameters.getRaySourceReceiverDirectivity());
-            pathParameters = pathsParameters.remove(0);
-            assertEquals(3, pathParameters.getCutProfile().getReceiver().receiverPk);
+            assertEquals(new Orientation(180, 0, 0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity());
+            attenuationOutput = attenuationOutputs.removeFirst();
+            assertEquals(3, attenuationOutput.getCutProfile().getReceiver().receiverPk);
             // receiver is on the right of the source
-            assertEquals(new Orientation(90, 0, 0), pathParameters.getRaySourceReceiverDirectivity());
-            pathParameters = pathsParameters.remove(0);
-            assertEquals(4, pathParameters.getCutProfile().getReceiver().receiverPk);
+            assertEquals(new Orientation(90, 0, 0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity());
+            attenuationOutput = attenuationOutputs.removeFirst();
+            assertEquals(4, attenuationOutput.getCutProfile().getReceiver().receiverPk);
             // receiver is on the left of the source
-            assertEquals(new Orientation(360-90, 0, 0), pathParameters.getRaySourceReceiverDirectivity());
+            assertEquals(new Orientation(360-90, 0, 0), attenuationOutput.getCutProfile().getRaySourceReceiverDirectivity());
 
         }
     }
@@ -482,7 +503,7 @@ public class NoiseMapByReceiverMakerTest {
             noiseMapByReceiverMaker.setHeightField("HEIGHT");
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportRaysMethod = NoiseMapDatabaseParameters.ExportRaysMethods.TO_RAYS_TABLE;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().raysTable = "RAYS";
-            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportCnossosPathWithAttenuation = true;
+            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationOutput = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationMatrix = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().mergeSources = false;
             noiseMapByReceiverMaker.setDemTable("DEM");
@@ -492,24 +513,26 @@ public class NoiseMapByReceiverMakerTest {
 
             NoiseMapDatabaseParameters parameters = noiseMapByReceiverMaker.getNoiseMapDatabaseParameters();
 
-            List<CnossosPath> pathsParameters = new ArrayList<>();
-            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH FROM " + parameters.raysTable + " WHERE NOT FAVOURABLE ORDER BY IDRECEIVER")) {
+            List<AttenuationOutput> attenuationOutputs = new ArrayList<>();
+            try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH FROM " + parameters.raysTable + " WHERE METEO='homogeneous' ORDER BY IDRECEIVER")) {
                 while (rs.next()) {
-                    CnossosPath cnossosPath = NoiseMapWriter.jsonToPropagationPath(rs.getString("PATH"));
-                    pathsParameters.add(cnossosPath);
+                    CnossosAttenuationOutput attenuationOutput = jsonToCnossosAttenuationOutput(rs.getString("PATH"));
+                    attenuationOutputs.add(attenuationOutput);
                 }
             }
-            assertEquals(1 , pathsParameters.size());
+            assertEquals(1 , attenuationOutputs.size());
             // Check source coordinates
-            CnossosPath pathParameters = pathsParameters.get(0);
-            assertEquals(200.53, pathParameters.getCutProfile().getSource().coordinate.z, 0.1);
+            AttenuationOutput attenuationOutput = attenuationOutputs.getFirst();
+            assertEquals(200.53, attenuationOutput.getCutProfile().getSource().coordinate.z, 0.1);
             // Check receiver coordinates
-            assertEquals(189.30, pathParameters.getCutProfile().getReceiver().coordinate.z, 0.1);
+            assertEquals(189.30, attenuationOutput.getCutProfile().getReceiver().coordinate.z, 0.1);
             // Check CNOSSOS path points
             // One diffraction on horizontal edge of building
-            assertEquals(3, pathParameters.getPointList().size());
-            assertEquals(200.53, pathParameters.getPointList().get(0).coordinate.y, 0.1);
-            assertEquals(189.30, pathParameters.getPointList().get(pathParameters.getPointList().size() - 1).coordinate.y, 0.1);
+            assertInstanceOf(CnossosAttenuationOutput.class, attenuationOutput);
+            CnossosAttenuationOutput cnossosAttenuationOutput = (CnossosAttenuationOutput) attenuationOutput;
+            assertEquals(3, cnossosAttenuationOutput.propagationPath.getPointList().size());
+            assertEquals(200.53, cnossosAttenuationOutput.propagationPath.getPointList().getFirst().coordinate.y, 0.1);
+            assertEquals(189.30, cnossosAttenuationOutput.propagationPath.getPointList().getLast().coordinate.y, 0.1);
         }
     }
 
@@ -548,7 +571,7 @@ public class NoiseMapByReceiverMakerTest {
             noiseMapByReceiverMaker.setHeightField("HEIGHT");
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportRaysMethod = NoiseMapDatabaseParameters.ExportRaysMethods.TO_RAYS_TABLE;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().raysTable = "RAYS";
-            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportCnossosPathWithAttenuation = true;
+            noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationOutput = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().exportAttenuationMatrix = true;
             noiseMapByReceiverMaker.getNoiseMapDatabaseParameters().mergeSources = false;
             noiseMapByReceiverMaker.setDemTable("DEM");
@@ -558,19 +581,23 @@ public class NoiseMapByReceiverMakerTest {
 
             NoiseMapDatabaseParameters parameters = noiseMapByReceiverMaker.getNoiseMapDatabaseParameters();
 
-            List<CnossosPath> pathsParameters = new ArrayList<>();
+            List<AttenuationOutput> attenuationOutputs = new ArrayList<>();
             try(ResultSet rs = st.executeQuery("SELECT IDRECEIVER, PATH FROM " + parameters.raysTable + " ORDER BY IDRECEIVER")) {
                 while (rs.next()) {
-                    CnossosPath cnossosPath = NoiseMapWriter.jsonToPropagationPath(rs.getString("PATH"));
-                    pathsParameters.add(cnossosPath);
+                    CnossosAttenuationOutput attenuationOutput = jsonToCnossosAttenuationOutput(rs.getString("PATH"));
+                    attenuationOutputs.add(attenuationOutput);
                 }
             }
             // Diffraction over the walls of the building, but no direct path
-            assertEquals(2 , pathsParameters.size());
+            assertEquals(2 , attenuationOutputs.size());
             // Homogenous path with diffraction over the building wall
-            assertEquals(PointPath.POINT_TYPE.DIFH, pathsParameters.get(0).getPointList().get(1).type);
+            assertInstanceOf(CnossosAttenuationOutput.class, attenuationOutputs.getFirst());
+            CnossosAttenuationOutput cnossosAttenuationOutput0 = (CnossosAttenuationOutput) attenuationOutputs.getFirst();
+            assertEquals(PointPath.POINT_TYPE.DIFH, cnossosAttenuationOutput0.propagationPath.getPointList().get(1).type);
             // Favorable path with diffraction over the building wall
-            assertEquals(PointPath.POINT_TYPE.DIFH, pathsParameters.get(1).getPointList().get(1).type);
+            assertInstanceOf(CnossosAttenuationOutput.class, attenuationOutputs.get(1));
+            CnossosAttenuationOutput cnossosAttenuationOutput1 = (CnossosAttenuationOutput) attenuationOutputs.get(1);
+            assertEquals(PointPath.POINT_TYPE.DIFH, cnossosAttenuationOutput1.propagationPath.getPointList().get(1).type);
         }
     }
 }
