@@ -37,8 +37,8 @@ public class CnossosPathBuilder {
                                            List<Double> exactFrequencyArray) {
         final List<CutPoint> cuts = cutProfile.cutPoints;
 
-        Coordinate src = pts2D.get(0);
-        Coordinate rcv = pts2D.get(pts2D.size() - 1);
+        Coordinate src = pts2D.getFirst();
+        Coordinate rcv = pts2D.getLast();
         CutPoint srcCut = cutProfile.getSource();
         CutPoint rcvCut = cutProfile.getReceiver();
         for (int i0Cut = 1; i0Cut < cuts.size() - 1; i0Cut++) {
@@ -245,8 +245,8 @@ public class CnossosPathBuilder {
         List<Integer> cut2DGroundIndex = new ArrayList<>(cutProfilePoints.size());
         Coordinate[] pts2DGround = cutProfile.computePts2DGround(cut2DGroundIndex).toArray(new Coordinate[0]);
         double[] meanPlane = JTSUtility.getMeanPlaneCoefficients(pts2DGround);
-        Coordinate firstPts2D = pts2D.get(0);
-        Coordinate lastPts2D = pts2D.get(pts2D.size()-1);
+        Coordinate firstPts2D = pts2D.getFirst();
+        Coordinate lastPts2D = pts2D.getLast();
         SegmentPath srPath = computeSegment(firstPts2D, lastPts2D, meanPlane, cutProfile.getGPath(), cutProfile.getSource().groundCoefficient);
         // Directive 2002/49/EC, section 2.5.3 "Significant heights above the ground":
         // "If the equivalent height of a point becomes negative, i.e. if the point is located
@@ -289,7 +289,6 @@ public class CnossosPathBuilder {
         cnossosPath.setPointList(points);
         cnossosPath.setSegmentList(segments);
         cnossosPath.setSRSegment(srPath);
-        cnossosPath.init(exactFrequencyArray.size());
         List<Coordinate> hullPts2D = pts2D;
         List<CutPoint> transformedCutPoints = null;
         if(favourable) {
@@ -377,8 +376,8 @@ public class CnossosPathBuilder {
                 }
                 Orientation emissionDirection = computeOrientation(cutProfile.getSource().orientation,
                         cutProfile.cutPoints.get(i0).getCoordinate(), targetPosition);
-                points.get(0).orientation = emissionDirection;
-                cnossosPath.raySourceReceiverDirectivity = emissionDirection;
+                points.getFirst().orientation = emissionDirection;
+                cutProfile.setRaySourceReceiverDirectivity(emissionDirection);
                 src = pts2D.get(i0);
             }
             // Add reflection/vertical edge diffraction points/segments between i0 i1
@@ -427,11 +426,11 @@ public class CnossosPathBuilder {
             points.add(new PointPath(pts2D.get(i1), cutPt1.getzGround(), RECV));
             if(previousPivotPoint != i0 && i == hullPointsIndices.size() - 1) {
                 // we added segments before i1 vertical plane diffraction point, but it is the last vertical plane
-                // diffraction point and we must add the remaining segment between the last horizontal diffraction point
+                // diffraction point, and we must add the remaining segment between the last horizontal diffraction point
                 // and the last point
                 Coordinate[] segmentGroundPoints = Arrays.copyOfRange(pts2DGround, previousPivotGround, pts2DGround.length);
                 meanPlane = JTSUtility.getMeanPlaneCoefficients(segmentGroundPoints);
-                SegmentPath seg = computeSegment(pts2D.get(previousPivotPoint), pts2D.get(pts2D.size() - 1),
+                SegmentPath seg = computeSegment(pts2D.get(previousPivotPoint), pts2D.getLast(),
                         meanPlane, cutProfile.getGPathByIndex(previousPivotPoint, cutProfile.cutPoints.size() - 1, Scene.DEFAULT_G_BUILDING),
                         gS);
                 seg.setPoints2DGround(segmentGroundPoints);
@@ -450,7 +449,7 @@ public class CnossosPathBuilder {
             path.setPoints2DGround(segmentGroundPoints);
             segments.add(path);
             if (i != hullPointsIndices.size() - 1) {
-                PointPath pt = points.get(points.size() - 1);
+                PointPath pt = points.getLast();
                 pt.type = DIFH;
                 pt.bodyBarrier = bodyBarrier;
                 if(cutPt1 instanceof CutPointWall) {
@@ -463,7 +462,7 @@ public class CnossosPathBuilder {
             return null;
         }
 
-        Coordinate rcv = points.get(points.size()-1).coordinate;
+        Coordinate rcv = points.getLast().coordinate;
         PointPath p0 = points.stream().filter(p -> p.type.equals(DIFH)).findFirst().orElse(null);
         if(p0==null){
             // Direct propagation (no diffraction over obstructing objects)
@@ -494,7 +493,7 @@ public class CnossosPathBuilder {
                 long difVPointCount = cnossosPath.getPointList().stream().
                         filter(pointPath -> pointPath.type.equals(DIFV)).count();
                 double distance = difVPointCount == 0 ? cnossosPath.getSRSegment().d : cnossosPath.getSRSegment().dc;
-                cnossosPath.delta = segments.get(0).d + cnossosPath.e + segments.get(segments.size()-1).d - distance;
+                cnossosPath.delta = segments.getFirst().d + cnossosPath.e + segments.getLast().d - distance;
             } else {
                 segments.addAll(rayleighSegments);
                 points.addAll(1, rayleighPoints);
@@ -508,8 +507,8 @@ public class CnossosPathBuilder {
         }
         Coordinate cn = pn.coordinate;
 
-        SegmentPath seg1 = segments.get(0);
-        SegmentPath seg2 = segments.get(segments.size()-1);
+        SegmentPath seg1 = segments.getFirst();
+        SegmentPath seg2 = segments.getLast();
 
         double dSO0 = seg1.d;
         double dOnR = seg2.d;
